# opensesame-plugin-audio_low_latency

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.py  stdeb.cfg
audio_low_latency_play/: audio_low_latency_play.md  audio_low_latency_play.py  info.yaml
audio_low_latency_play_init/: audio_low_latency_play_init.md  audio_low_latency_play_init.py  info.yaml
audio_low_latency_play_start/: audio_low_latency_play_start.md  audio_low_latency_play_start.py  info.yaml
audio_low_latency_play_stop/: audio_low_latency_play_stop.py  info.yaml
audio_low_latency_play_wait/: audio_low_latency_play_wait.md  audio_low_latency_play_wait.py  info.yaml
audio_low_latency_record/: audio_low_latency_record.md  audio_low_latency_record.py  info.yaml
audio_low_latency_record_init/: audio_low_latency_record_init.md  audio_low_latency_record_init.py  info.yaml
audio_low_latency_record_start/: audio_low_latency_record_start.md  audio_low_latency_record_start.py  info.yaml
audio_low_latency_record_stop/: audio_low_latency_record_stop.md  audio_low_latency_record_stop.py
audio_low_latency_record_wait/: audio_low_latency_record_wait.py
debian/: changelog  control  copyright  rules
debs/stretch/: python-pyalsaaudio_0.8.4-1~bpo9+1_amd64.deb  python3-pyalsaaudio_0.8.4-1~bpo9+1_amd64.deb
debs/testing+unstable/: python-pyalsaaudio_0.8.4-2_amd64.deb  python3-pyalsaaudio_0.8.4-2_amd64.deb
opensesame_plugins/audio_low_Latency/: __init__.py
opensesame_plugins/audio_low_latency_play/: audio_low_latency_play.md  audio_low_latency_play.py  info.yaml
opensesame_plugins/audio_low_latency_play_init/: audio_low_latency_play_init.md  audio_low_latency_play_init.py  info.yaml
opensesame_plugins/audio_low_latency_play_pause/: audio_low_latency_play_pause.py  info.yaml
opensesame_plugins/audio_low_latency_play_resume/: audio_low_latency_play_resume.md  audio_low_latency_play_resume.py  info.yaml
opensesame_plugins/audio_low_latency_play_start/: audio_low_latency_play_start.md  audio_low_latency_play_start.py  info.yaml
opensesame_plugins/audio_low_latency_play_stop/: audio_low_latency_play_stop.py  info.yaml
opensesame_plugins/audio_low_latency_play_wait/: audio_low_latency_play_wait.md  audio_low_latency_play_wait.py  info.yaml
opensesame_plugins/audio_low_latency_record/: audio_low_latency_record.md  (+2 more)
(+71 files in other folders)
